socil medial link remove

--- a/views/greeting.edge
+++ b/views/greeting.edge
@@ -91,7 +91,7 @@ h1{
     width: 350px;
     margin:auto;
     background: cover;
-    font-family: 'Dancing Script', cursive;
+    /* font-family: 'Dancing Script', cursive; */
     background-color: black;
     background: url('{{ greetings[0].bg }}');
     /* background-size: 350px 700px; */
