--- a/views/profileUser.edge
+++ b/views/profileUser.edge
@@ -148,7 +148,7 @@ h1{
         width: 350px;
         margin:auto;
         background: cover;
-        font-family: 'Dancing Script', cursive;
+        /* font-family: 'Dancing Script', cursive; */
         /* background: url( "./invitationBg/birthday.png"); */
         background-size:100% 100% ;
         padding-top: 350px;
@@ -279,7 +279,7 @@ font-family:'play';
                                         <div class="col-md-8 offset-md-2 mb-2 text-center">
                                                 <div class="d-flex justify-content-center">
                                                     <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">
-                                                    <input type="text" id="title" name="title" class="ytedit2  d-inline text-center" value="https://meelindia.com/invitation?id={{dt._id}}" placeholder=""> 
+                                                    <input type="text" id="title" name="title" class="ytedit  d-inline text-center" value="https://meelindia.com/invitation?id={{dt._id}}" placeholder=""> 
                                                     <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#"><i class="fa fa-bell" aria-hidden="true"></i></button>
                                                 <!--    <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#shareModal"><i class="fa fa-bell" aria-hidden="true"></i></button>
                                                 -->
@@ -325,7 +325,7 @@ font-family:'play';
                                         <div class="col-md-8 offset-md-2 mb-2 text-center">
                                                 <div class="d-flex justify-content-center">
                                                     <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' " >
-                                                    <input type="text" id="title" name="title" class="ytedit2 text-dark d-inline text-center" value="https://meelindia.com/invitationCustom?id={{dt._id}}" placeholder=""> 
+                                                    <input type="text" id="title" name="title" class="ytedit text-dark d-inline text-center" value="https://meelindia.com/invitationCustom?id={{dt._id}}" placeholder=""> 
                                                     <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#"><i class="fa fa-bell" aria-hidden="true"></i></button>
                                                 <!--    <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#shareModal"><i class="fa fa-bell" aria-hidden="true"></i></button>
                                                 -->
@@ -360,7 +360,7 @@ font-family:'play';
                                 <div class="col-md-8 offset-md-2 mb-2 text-center">
                                         <div class="d-flex justify-content-center">
                                             <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">
-                                            <input type="text" id="title" name="title" class="ytedit2 text-dark d-inline text-center" value="https://meelindia.com/greeting?id={{dt._id}}" placeholder=""> 
+                                            <input type="text" id="title" name="title" class="ytedit text-dark d-inline text-center" value="https://meelindia.com/greeting?id={{dt._id}}" placeholder=""> 
                                             <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#"><i class="fa fa-bell" aria-hidden="true"></i></button>
                                         <!--    <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#shareModal"><i class="fa fa-bell" aria-hidden="true"></i></button>
                                         -->
