--- a/views/invitationCreate.edge
+++ b/views/invitationCreate.edge
@@ -64,7 +64,7 @@ crossorigin=""></script>
         width: 350px;
         margin:auto;
         background: cover;
-        /* font-family: 'Dancing Script', cursive; */
+        font-family: 'Dancing Script', cursive;
         /* background: url( "./invitationBg/birthday.png"); */
         background-size:100% 100% ;
         padding-top: 350px;
