--- a/views/invitationCreateCustom.edge
+++ b/views/invitationCreateCustom.edge
@@ -1,18 +1,9 @@
 @layout('layout.app')
 
 @section('content')
+
+<script src="https://apis.mapmyindia.com/advancedmaps/v1/whlo5caw3pypkf9tiiarog3w541aptjl/map_load?v=1.3"></script>
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-crossorigin=""/>
-<link href="./leaflet/leaflet-search.css" rel="stylesheet">
-
-<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-crossorigin=""></script>
-<script src="./leaflet/leaflet-search.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/0.0.1-beta.5/esri-leaflet-geocoder.css">
-
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
@@ -139,6 +130,7 @@ crossorigin=""></script>
 
 
 </style>
+
 <div class="container-fluid">
    <div class="row">
     <h1 class="col-12 text-center headingmain text-primary">MeelIndia</h1>
@@ -152,7 +144,7 @@ crossorigin=""></script>
     </div>
     <div class="row">
     <div class="col-md-6 p-1 col-sm-6 ibd">
-        <form action="invitationCustomCreateDB" id="cyo" class="col-md-8 offset-md-2 text-dark " enctype="multipart/form-data" method="POST">
+        <form action="invitationCustomCreateDB" onsubmit="setLocation()" id="cyo" class="col-md-8 offset-md-2 text-dark " enctype="multipart/form-data" method="POST">
             <h2 class="text-center mt-3  text-danger">Create / Upload Your Own Invitation</h2>
             <hr>
             <div class="form-group mt-3 h4">
@@ -176,7 +168,7 @@ crossorigin=""></script>
             <button type="submit" class="btn btn-primary shadowme mt-3 col-md-12">Submit</button>
         </form>       
     </div>
-    <div class="col-md-6 col-sm-6" onload="getLocation()">
+    <div class="col-md-6 col-sm-6" >
         <form action="" class="col-md-12 col-sm-12">
             <div class="form-group">
                 <input type="hidden" class="form-control" id="lat" name="lat" aria-describedby="mobile" placeholder="lat" required>
@@ -204,113 +196,28 @@ crossorigin=""></script>
    </div>
 </div>
 
-<script>
-     
-    var lngg, latt,hlat,hlng;
-    var marker;
-    
-            var map = L.map('map').setView([19.8684798, 75.3218784], 10);
-            map.locate({setView : true});
-           
-            map.addLayer(new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'));	
-            marker = L.marker([19.8684798, 75.3218784]).addTo(map)
-            .bindPopup('My location')
-                        .openPopup();
-           
-            L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-                attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-            }).addTo(map);
-                        
-         marker.dragging.enable();
 
-        function theLocation(){
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(showPosition);
-            } else { 
-                x = document.getElementById('notice');
-                x.innerHTML = "Geolocation is not supported by this browser.";
-            }
-            
-        } theLocation();
-     
-    function showPosition(position) {
-        latt = position.coords.latitude;
-        lngg = position.coords.longitude;
-            document.getElementById('demo').innerHTML = "Latitude: " + latt + 
-            "<br>Longitude: " + lngg;
-            marker.setLatLng([position.coords.latitude, position.coords.longitude]);
+<script>
+    var map=new MapmyIndia.Map("map",{ center:[28.61, 77.23],zoomControl: true,hybrid:true });
+    var marker = L.marker([28.61, 77.23],{draggable:"draggable"}).addTo(map);
+
+  
+    function onMapClick(e) {
+
+            var pt = e.latlng;
+            marker.setLatLng(pt);
+            document.getElementById('lat2').value = pt.lat;
+            document.getElementById('lng2').value = pt.lng;
+
     }
 
-            function setLocation(){
-                position = marker.getLatLng();
-                hlat = position.lat;
-                hlng = position.lng;
-                document.getElementById('lat').value = hlat;
-                document.getElementById('lng').value = hlng;
-                
-                document.getElementById('lat2').value = hlat;
-                document.getElementById('lng2').value = hlng;
+    function setLocation(){
+        pt = marker.getLatLng();
+        document.getElementById('lat2').value = pt.lat;
+        document.getElementById('lng2').value = pt.lng;
+    }
 
-                alert('Location is Set.');
-            }
-
-
-            var search = new L.Control.Search({
-                    url: 'https://nominatim.openstreetmap.org/search?format=json&q={s}',
-                                    jsonpParam: 'json_callback',
-                                    propertyName: 'display_name',
-                                    propertyLoc: ['lat','lon'],
-                                    marker: false,
-                                    autoCollapse: true,
-                                    autoType: false,
-                                    textPlaceholder: ' search the location... ',
-                                    minLength: 2
-            });
-
-            search.on('search:locationfound',
-                    function(e) {
-                        
-                        map.removeLayer(marker);
-                        
-                        map.addLayer(new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'));	
-                        marker = L.marker([e.latlng.lat, e.latlng.lng]).addTo(map)
-                        .bindPopup('My location')
-                                    .openPopup();
-
-                        marker.dragging.enable();
-
-                    latt = e.latlng.lat;
-                    lngg = e.latlng.lng;
-                    document.getElementById('demo').innerHTML = "Latitude: " + latt + "<br>Longitude: " + lngg;
-                    
-            });
-          
-            map.addControl(search);
-
-            
-            function onMapClick(e) {
-
-                    marker.on("dragend", function(ev) {
-                        var chagedPos = ev.target.getLatLng();
-                        this.bindPopup("ME at " +chagedPos.toString()).openPopup();
-                        loc1 = [chagedPos.lat,chagedPos.lng];
-                        hlat = chagedPos.lat;
-                        hlng = chagedPos.lng;
-                        document.getElementById('lat').value = hlat;
-                        document.getElementById('lng').value = hlng;
-                                
-                        document.getElementById('lat2').value = hlat;
-                        document.getElementById('lng2').value = hlng;
-                        document.getElementById('demo').innerHTML = "Latitude: " + hlat + 
-                        "<br>Longitude: " + hlng;
-                        console.log(loc1);
-
-                    });
-
-                    }
-
-                    map.on('click', onMapClick);
-
+    map.on('click', onMapClick);
 
 </script>
 
