greeting CYO added

--- a/views/greetingCreate.edge
+++ b/views/greetingCreate.edge
@@ -193,6 +193,9 @@ crossorigin=""></script>
     </div>
  
    </div>
+   <div class="col-12 text-center">
+        <input type="button" value="Create Your Own" class="btn btn-outline-danger mt-2 btn-lg" onclick="window.location='greetingCreateCustom' ">  
+    </div>
 </div>
 
 <script>
