--- a/views/help.edge
+++ b/views/help.edge
@@ -2,4 +2,72 @@
 
 @section('content')
 
+
+<div class="container pt-5">
+    <div class="row">
+        <h2 class="text-center col-12">
+            FAQ’s <br>
+            <small>
+                ( Frequently asked questions )
+            </small>
+            <hr>
+        </h2>
+        <div class="col-md-8 offset-md-2 mt-2 text-justify">
+            
+            <h5>                          
+                        <b> What is the need of Digital cards? </b> <br>
+                        By using this special cards we can invite, influence and auto remind our guest’s digital within few minutes of time and its hassle free process.
+                    <br> <br> <hr>
+                        <b> Is the card generation available on iOS/Window/MAC platforms? </b> <br>
+                        Yes, it’s available on all the mentioned platforms.
+                    <br> <br> <hr>
+                        <b> How these cards are special from conventional cards? </b> <br>
+                        Coz we are having the key features such as blocking of calendar (setting auto remainder), setting location makes our card special from the conventional. 
+                        [With animations and sound effect*] 
+                    <br> <br> <hr>
+                        <b> Can I design my own template for digital cards? </b> <br>
+                        Yes, you can.
+                    <br> <br> <hr>
+                        <b> If needed, is there any facility of hardcopy available? </b> <br>
+                        Yes……Contact us for more information.*
+                    <br> <br> <hr>
+                        <b> Do we have apps on Android/iOS platform? </b> <br>
+                        Yes, scroll down and download it from given link
+                    <br> <br> <hr>
+                        <b> Can we design cards for special events?* </b> <br>
+                        Yes.
+                    <br> <br> <hr>
+                        <b> Can we auto remind our guests when needed? </b> <br>
+                        Yes, whenever you need you can remind your guests by clicking on bell icon.
+                    <br> <br> <hr>
+                        <b> How much time is required to generate a single digital card? </b> <br>
+                        Approx 1 minute is the average time, it can be generated faster.
+                    <br> <br> <hr>
+                        <b> Can we delete the designed template?? </b> <br>
+                        Yes we can.
+                    <br> <br> <hr>
+                        <b> Can we update our data (name, description, location, date and time) after final generation of link? </b> <br>
+                        Yes.
+
+                    <br> <br> <hr>
+                        <b> Do we need to verify our account by email? </b> <br>
+                        Yes, it is must for security purpose.
+                    <br> <br> <hr>
+                        <b> Can I deactivate my generated account and data? </b> <br>
+                        Yes simply.
+                    <br> <br> <hr>
+                        <b> What all things are provided for premium customers?* </b                          <br> <br> <hr>> <br>
+                        <b> Can we take lifetime membership of Meelindia?* </b> <br>                          <br> <br> <hr>
+                        <b> Can I cancel my existing membership? And what is the min time limit for ful                       <br> <br> <hr>l refund?* </b> <br>
+                        <b> Is there a provision made for us to visit the website ads free??* </b> <br>                       <br> <br> <hr>
+                        <b> If there is such provision, then will it show ads                         <br> <br> <hr> to our guests?* </b> <br>
+                        <b> Are the video cards available with us?* </b> <br>
+
+            </h5>
+        </div>
+
+
+        
+    </div>
+</div>
 @endsection
