--- a/views/index.edge
+++ b/views/index.edge
@@ -135,7 +135,7 @@ crossorigin="anonymous">
         </div>
         <div class="col-md-6 pt-5 text-center">
             <h1 class=" display-4 text-light mt-4 shadowme-text">Upload Your Own <br> Greeting.</h1>
-            <input type="button" class="btn btn-light shadowme btn-lg mt-3 btn-block col-10 offset-1" value="Create">
+            <input type="button" class="btn btn-light shadowme btn-lg mt-3 btn-block col-10 offset-1" onclick="window.location='greetingCreateCustom' " value="Create">
         </div>
     </div>
       </div>
