--- a/views/invitation.edge
+++ b/views/invitation.edge
@@ -200,8 +200,8 @@ font-family:'play';
         </div>
              
             @endeach
-            <input type="button" value="MeelIndia Home" class="btn btn-danger mt-2 mb-1 col-md-5" onclick="window.location='profileUser'">
-            <input type="button" value="Create Your Own Invitation / Greeting" class="btn btn-danger mt-2 mb-1 col-md-5 offset-md-2" onclick="window.location='SignUpUser'">
+            <input type="button" value="MeelIndia Home" class="btn btn-danger mt-2 mb-1 col-md-12" onclick="window.location='profileUser'">
+            <input type="button" value="Create Your Own Invitation / Greeting" class="btn btn-danger mt-2 mb-1 col-md-12" onclick="window.location='SignUpUser'">
             <br> <br>
             
 
