--- a/views/profileUser.edge
+++ b/views/profileUser.edge
@@ -359,9 +359,9 @@ font-family:'play';
                             <div class="col-md-12 mt-3 mb-3">
                                 <div class="col-md-8 offset-md-2 mb-2 text-center">
                                         <div class="d-flex justify-content-center">
-                                            <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">
+                                            {{--  <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">  --}}
                                             <input type="text" id="title" name="title" class="ytedit text-dark d-inline text-center" value="https://meelindia.com/greeting?id={{dt._id}}" placeholder=""> 
-                                            <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#"><i class="fa fa-bell" aria-hidden="true"></i></button>
+                                            {{--  <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#"><i class="fa fa-bell" aria-hidden="true"></i></button>  --}}
                                         <!--    <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#shareModal"><i class="fa fa-bell" aria-hidden="true"></i></button>
                                         -->
                                         </div>
@@ -376,7 +376,6 @@ font-family:'play';
                                     <div class="dataInvite">
                                         <form action="inviteUpdate" method="POST">
                                             <input type="hidden" name="_id" value="{{dt._id}}">
-                                            
                                             <p class="ytedit h4 inputInvite text-center" style="font-family:{{ dt.nameFont}}; font-size:2.5em;"> {{dt.title}} </p>    
                                             <p class="inputInvite text-center"  style="font-family:{{ dt.bodyFont}}; font-size:1.5em;" >{{ dt.content}}</p><br>
                                         </form>
@@ -395,6 +394,36 @@ font-family:'play';
                                 
                     @endeach
 
+
+                      
+                    @each(dt in greetingsCustom)
+                                
+                                <div class="col-md-12 mt-3 mb-3">
+                                        <div class="col-md-8 offset-md-2 mb-2 text-center">
+                                                <div class="d-flex justify-content-center">
+                                                    {{--  <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' " >  --}}
+                                                    <input type="text" id="title" name="title" class="ytedit text-dark d-inline text-center" value="https://meelindia.com/greetingCustom?id={{dt._id}}" placeholder=""> 
+                                                    <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#"><i class="fa fa-bell" aria-hidden="true"></i></button>
+                                                <!--    <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#shareModal"><i class="fa fa-bell" aria-hidden="true"></i></button>
+                                                -->
+                                                </div>
+                                                <div class="d-flex justify-content-center">
+                                                        <a class="socialbtn h1 m-2" href="whatsapp://send?text=https://meelindia.com/invitationCustom?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
+                                                        <a class="socialbtn h1 m-2" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/greetingCustom?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
+                                                        {{--  <a class="socialbtn h1 m-2" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a>   --}}
+                                                        <a class="socialbtn h1 m-2" onclick='myFunctionCustom("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
+                                                </div>
+                                                <img src="{{dt.image}}" width="80%" alt="">
+                                        </div> 
+                                </div>
+                                <form action="inviteCustomDelete" class="mt-2" method="POST">
+                                    <input type="hidden" name="_id" value="{{dt._id}}">
+                                    <input type="submit" value="Delete" class="btn btn-danger col-10 offset-1 mt-1">
+                                </form>
+                                
+                                <hr width="100%">
+
+                    @endeach
 
                 </div>
         
