--- a/views/layout/app.edge
+++ b/views/layout/app.edge
@@ -276,11 +276,8 @@
         nav{
           text-align: right;
         }
-      .inviteBlock{
+      .inviteBlock, .inviteBlock2, .greetingBlock, .greetingBlock2 {
           left: 170px;
-      }
-      .greetingBlock{
-        left: 170px;
       }
               .navbar-brand.abs {
                 position: absolute;
