--- a/views/layout/app.edge
+++ b/views/layout/app.edge
@@ -253,14 +253,14 @@
     }
     .dropdown1:hover .inviteBlock{ display: inline-block; }
     .dropdown2:hover .inviteBlock2{ display: inline-block; }
-    .inviteBlock{
+    .inviteBlock, .inviteBlock2{
         position: fixed;
         left: 100px;
         z-index: 99;
         /* border: 2px solid black; */
         box-shadow: 1px 0px 10px;
       }
-      .greetingBlock{
+      .greetingBlock, .greetingBlock2{
         position: fixed;
         left: 100px;
         z-index: 99;
